--- a/src/manage/Cargo.toml
+++ b/src/manage/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 ic-cdk = "0.5.0" 
 ic-cdk-macros = "0.5.0" 
 candid = "0.7.14" 
+serde = "1.0.99"
+lazy_static = "1.4.0"
 
 [lib]
 crate-type = ["cdylib"]
