--- a/src/manage/Cargo.toml
+++ b/src/manage/Cargo.toml
@@ -12,6 +12,7 @@ ic-cdk-macros = "0.5.0"
 candid = "0.7.14" 
 serde = "1.0.99"
 lazy_static = "1.4.0"
+serde_json = "1.0.79"   
 
 [lib]
 crate-type = ["cdylib"]
