--- a/src/canister_log/Cargo.toml
+++ b/src/canister_log/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "manage"
+name = "canister_log"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 
 [dependencies]
 ic-cdk = "0.5.0" 
@@ -12,8 +11,7 @@ ic-cdk-macros = "0.5.0"
 candid = "0.7.14" 
 serde = "1.0.99"
 lazy_static = "1.4.0"
-serde_json = "1.0.79"
-rlp = "0.5.1"
+serde_json = "1.0.79"   
 
 [lib]
 crate-type = ["cdylib"]
