--- a/src/canister_log/Cargo.toml
+++ b/src/canister_log/Cargo.toml
@@ -12,6 +12,7 @@ candid = "0.7.14"
 serde = "1.0.99"
 lazy_static = "1.4.0"
 serde_json = "1.0.79"   
+rlp = "0.5.1"
 
 [lib]
 crate-type = ["cdylib"]
