--- a/src/manage/Cargo.toml
+++ b/src/manage/Cargo.toml
@@ -14,6 +14,6 @@ serde = "1.0.99"
 lazy_static = "1.4.0"
 serde_json = "1.0.79"
 rlp = "0.5.1"
-
+futures = "0.3.21"  
 [lib]
 crate-type = ["cdylib"]
