--- a/src/wallet/Cargo.toml
+++ b/src/wallet/Cargo.toml
@@ -1,20 +1,16 @@
 [package]
-name = "manage"
+name = "wallet"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 
 [dependencies]
 ic-cdk = "0.5.0" 
 ic-cdk-macros = "0.5.0" 
 candid = "0.7.14" 
 serde = "1.0.99"
-lazy_static = "1.4.0"
-serde_json = "1.0.79"
-rlp = "0.5.1"
-futures = "0.3.21"  
 
 [lib]
 crate-type = ["cdylib"]
+
